<resources>
    <string name="app_name">Glider</string>
    <string name="title_activity_maps">Map</string>
    <string name="speedText">SPEED</string>
    <string name="speedUnitText">[km/h]</string>
    <string name="speedValueText">-</string>
    <string name="climbSpeedText">CLIMB SPEED</string>
    <string name="climbSpeedUnitText">[m/s]</string>
    <string name="climbSpeedValueText">-</string>
    <string name="heightText">ALTITUDE</string>
    <string name="heightUnitText">[m]</string>
    <string name="heightValueText">-</string>
    <string name="pressureText">PRESSURE</string>
    <string name="pressureUnitText">[hPa]</string>
    <string name="pressureValueText">-</string>
    <string name="emergencyLandingButton">Emergency</string>
    <string name="findAirportButton">Home</string>
    <string name="distanceText">Distance:</string>
    <string name="maxAltitudeText">Max alt:</string>
    <string name="topSpeedText">Top speed:</string>
    <string name="na">N/A</string>

</resources>
