<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_history"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="3"
    tools:context="jstudio.com.glider.HistoryActivity">

    <LinearLayout
        android:id="@+id/listViewFragment"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        >
        <ListView
            android:id="@+id/historyList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="left|start"
            android:layout_weight="3"
            android:background="@color/takiFajnyBialy"/>

        <LinearLayout
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1">

            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">

                <TextView android:id="@+id/distance"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="12sp"
                    android:textColor="#000000"
                    android:text="@string/distanceText" />

                <TextView android:id="@+id/topSpeed"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="12sp"
                    android:textColor="#000000"
                    android:text="@string/topSpeedText" />

                <TextView android:id="@+id/maxAltitude"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="12sp"
                    android:textColor="#000000"
                    android:text="@string/maxAltitudeText" />
            </LinearLayout>

            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">

                <TextView android:id="@+id/distanceValue"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="12sp"
                    android:textColor="#000000"
                    android:text="@string/na" />

                <TextView android:id="@+id/topSpeedValue"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="12sp"
                    android:textColor="#000000"
                    android:text="@string/na" />

                <TextView android:id="@+id/maxAltitudeValue"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="12sp"
                    android:textColor="#000000"
                    android:text="@string/na" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <org.mapsforge.map.android.view.MapView
        android:id="@+id/mapView"
        android:layout_weight="2"
        android:layout_width="0dp"
        android:layout_height="fill_parent" />

</LinearLayout>
